[package]
name = "tower-error-example"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc"}
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc"}
